--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "toastify-js": "^1.12.0",
